tests/types/errors/legacy_function_literal_keyword.mog
const add fn(i32, i32) i32 = function(a i32, b i32) i32 {
  return a + b
}
